Fix some Sonar issues (#712)